--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
-  background-color: purple ;
+  background-color: white ;
   font-family: cursive;
 }
 
@@ -28,7 +28,7 @@ body {
 </head>
 <body>
 
-<h1 class="glow"> Pragon </h1>
+<h1 class="glow"> Melih adamdır </h1>
      
 </body>
 </html> 
